Added BPASS ref.

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -20543,7 +20543,24 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
-
+@ARTICLE{Eldridge:2017,
+   author = {{Eldridge}, J.~J. and {Stanway}, E.~R. and {Xiao}, L. and {McClelland}, L.~A.~S. and 
+	{Taylor}, G. and {Ng}, M. and {Greis}, S.~M.~L. and {Bray}, J.~C.
+	},
+    title = "{Binary Population and Spectral Synthesis Version 2.1: Construction, Observational Verification, and New Results}",
+  journal = {\pasa},
+archivePrefix = "arXiv",
+   eprint = {1710.02154},
+ primaryClass = "astro-ph.SR",
+ keywords = {binaries: general, galaxies: evolution, galaxies: stellar content, methods: numerical, stars: evolution, stars: statistics},
+     year = 2017,
+    month = nov,
+   volume = 34,
+      eid = {e058},
+    pages = {e058},
+      doi = {10.1017/pasa.2017.51},
+   adsurl = {http://adsabs.harvard.edu/abs/2017PASA...34...58E},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 
