--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -367,7 +367,7 @@ Young massive star clusters could further contribute to this rate \citep[e.g.,][
 \subsubsection{Masses}
 \ilya{The masses of black holes in binaries of interest will not change appreciably after the black holes are formed by stellar collapse or supernova explosions.}  The first black hole to form is unlikely to accrete a significant amount of mass from its companion: doubling its mass at the Eddington limit would take more than 100 million years, and the massive companion will only survive for a small fraction of that time. After the second compact object is formed, there is very little or no further accretion in the system. The mass of each black hole is thus almost equal to its mass at formation. 
 
-The classical isolated binary evolution channel discussed in detail above can produce binary black holes with a broad range of masses, matching all observations to date \citep[e.g.,][]{Stevenson:2017} as well as GW170817 and the observed Galactic double neutron stars \citep[e.g.,][]{Kruckow:2018,VignaGomez:2018}.  In fact, contrary to mistaken lore, the high masses of the first observed black holes were not entirely surprising: such systems were predicted to arise in low-metallicity environments and make a significant contribution to the detected population because more massive binaries emit more energy in gravitational waves \citep{Dominik:2014}; the effect of metallicity is discussed further in \autoref{environ} below. 
+The classical isolated binary evolution channel discussed in detail above can produce binary black holes with a broad range of masses, matching all observations to date \ilya{\citep[e.g.,][]{Stevenson:2017,Eldridge:2017}} as well as GW170817 and the observed Galactic double neutron stars \citep[e.g.,][]{Kruckow:2018,VignaGomez:2018}.  In fact, contrary to mistaken lore, the high masses of the first observed black holes were not entirely surprising: such systems were predicted to arise in low-metallicity environments and make a significant contribution to the detected population because more massive binaries emit more energy in gravitational waves \citep{Dominik:2014}; the effect of metallicity is discussed further in \autoref{environ} below. 
 
 Dynamical formation in globular clusters can also lead to a range of masses, but may favor more massive binaries: lighter black holes would be ejected by heavier ones in three-body interactions \citep{Rodriguez:2015}. The mass distribution is sensitive to natal kicks, which may eject black holes at formation \citep{Zevin:2017}.  \citet{Chatterjee:2017} argue that dynamical formation could explain all black hole binary merger observations to date, with old, metal-poor clusters preferentially contributing more massive black hole binaries and younger, metal-rich clusters contributing lighter binaries.
  
