Implemented Tauris comments.

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -20563,4 +20563,129 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{GiacobboMapelli:2018,
+   author = {{Giacobbo}, N. and {Mapelli}, M.},
+    title = "{The progenitors of compact-object binaries: impact of metallicity, common envelope and natal kicks}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1806.00001},
+ primaryClass = "astro-ph.HE",
+ keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Solar and Stellar Astrophysics},
+     year = 2018,
+    month = may,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180600001G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INBOOK{TaurisvdH:2006,
+   author = {{Tauris}, T.~M. and {van den Heuvel}, E.~P.~J.},
+    title = "{Formation and evolution of compact stellar X-ray sources}",
+ keywords = {Stellar X-Ray Sources, Formation, Evolution},
+booktitle = {Compact stellar X-ray sources},
+     year = 2006,
+    month = apr,
+   editor = {{Lewin}, W.~H.~G. and {van der Klis}, M.},
+    pages = {623-665},
+   adsurl = {http://adsabs.harvard.edu/abs/2006csxs.book..623T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{WoosleyBloom:2006,
+   author = {{Woosley}, S.~E. and {Bloom}, J.~S.},
+    title = "{The Supernova Gamma-Ray Burst Connection}",
+  journal = {\araa},
+   eprint = {astro-ph/0609142},
+     year = 2006,
+    month = sep,
+   volume = 44,
+    pages = {507-556},
+      doi = {10.1146/annurev.astro.43.072103.150558},
+   adsurl = {http://adsabs.harvard.edu/abs/2006ARA%26A..44..507W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{Szecsi:2017,
+   author = {{Szecsi}, D.},
+    title = "{Single and binary stellar progenitors of long-duration gamma-ray bursts}",
+ keywords = {gamma-ray burst, binary star, progenitor, massive star},
+booktitle = {Proceedings of the XII Multifrequency Behaviour of High Energy Cosmic Sources Workshop. 12-17 June, 2017 Palermo, Italy (MULTIF2017) Online at <A href=``https://pos.sissa.it/cgi-bin/reader/conf.cgi?confid=306''>https://pos.sissa.it/cgi-bin/reader/conf.cgi?confid=306</A>, id.65},
+     year = 2017,
+archivePrefix = "arXiv",
+   eprint = {1710.05655},
+ primaryClass = "astro-ph.HE",
+    month = jun,
+      eid = {65},
+    pages = {65},
+   adsurl = {http://adsabs.harvard.edu/abs/2017mbhe.confE..65S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Kruckow:2016,
+   author = {{Kruckow}, M.~U. and {Tauris}, T.~M. and {Langer}, N. and {Sz{\'e}csi}, D. and 
+	{Marchant}, P. and {Podsiadlowski}, P.},
+    title = "{Common-envelope ejection in massive binary stars. Implications for the progenitors of GW150914 and GW151226}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1610.04417},
+ primaryClass = "astro-ph.SR",
+ keywords = {stars: evolution, binaries: close, X-rays: binaries, stars: black holes, gravitational waves},
+     year = 2016,
+    month = nov,
+   volume = 596,
+      eid = {A58},
+    pages = {A58},
+      doi = {10.1051/0004-6361/201629420},
+   adsurl = {http://adsabs.harvard.edu/abs/2016A%26A...596A..58K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Bae:2014,
+   author = {{Bae}, Y.-B. and {Kim}, C. and {Lee}, H.~M.},
+    title = "{Compact binaries ejected from globular clusters as gravitational wave sources}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1308.1641},
+ primaryClass = "astro-ph.HE",
+ keywords = {black hole physics, gravitational waves, binaries: close, stars: neutron, globular clusters: general},
+     year = 2014,
+    month = may,
+   volume = 440,
+    pages = {2714-2725},
+      doi = {10.1093/mnras/stu381},
+   adsurl = {http://adsabs.harvard.edu/abs/2014MNRAS.440.2714B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{FragioneKocsis:2018,
+   author = {{Fragione}, G. and {Kocsis}, B.},
+    title = "{Black hole mergers from an evolving population of globular clusters}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1806.02351},
+ keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena},
+     year = 2018,
+    month = jun,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180602351F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Park:2017,
+   author = {{Park}, D. and {Kim}, C. and {Lee}, H.~M. and {Bae}, Y.-B. and 
+	{Belczynski}, K.},
+    title = "{Black hole binaries dynamically formed in globular clusters}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1703.01568},
+ primaryClass = "astro-ph.HE",
+ keywords = {gravitational waves, methods: numerical, binaries: close, stars: black holes, globular clusters: general},
+     year = 2017,
+    month = aug,
+   volume = 469,
+    pages = {4665-4674},
+      doi = {10.1093/mnras/stx1015},
+   adsurl = {http://adsabs.harvard.edu/abs/2017MNRAS.469.4665P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
