--- a/Mandel.bib
+++ b/Mandel.bib
@@ -20687,5 +20687,41 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Cantiello:2007,
+   author = {{Cantiello}, M. and {Yoon}, S.-C. and {Langer}, N. and {Livio}, M.
+	},
+    title = "{Binary star progenitors of long gamma-ray bursts}",
+  journal = {\aap},
+   eprint = {astro-ph/0702540},
+ keywords = {stars: binaries: general, stars: rotation, stars: evolution, stars: mass-loss, supernovae: general, gamma rays: bursts},
+     year = 2007,
+    month = apr,
+   volume = 465,
+    pages = {L29-L33},
+      doi = {10.1051/0004-6361:20077115},
+   adsurl = {http://adsabs.harvard.edu/abs/2007A%26A...465L..29C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Szecsi:2015,
+   author = {{Sz{\'e}csi}, D. and {Langer}, N. and {Yoon}, S.-C. and {Sanyal}, D. and 
+	{de Mink}, S. and {Evans}, C.~J. and {Dermine}, T.},
+    title = "{Low-metallicity massive single stars with rotation. Evolutionary models applicable to I Zwicky 18}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1506.09132},
+ primaryClass = "astro-ph.SR",
+ keywords = {stars: massive, galaxies: dwarf, stars: rotation, stars: evolution, supergiants, ultraviolet: stars},
+     year = 2015,
+    month = sep,
+   volume = 581,
+      eid = {A15},
+    pages = {A15},
+      doi = {10.1051/0004-6361/201526617},
+   adsurl = {http://adsabs.harvard.edu/abs/2015A%26A...581A..15S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
 
